--- a/css/styles.css
+++ b/css/styles.css
@@ -125,9 +125,19 @@ body {
 }
 /* HERO */
 .hero {
-  background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/backimg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #2e2f42;
 }
 .hero-title {
   font-weight: 700;
@@ -136,7 +146,7 @@ body {
   max-width: 500px;
   color: var(--primary-text-color);
   margin-bottom: 48px;
-
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
@@ -169,16 +179,36 @@ body {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
+.section-item::before {
+  content: "";
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  display: block;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .section-item {
   width: calc((100% - 72px) / 4);
   flex-grow: 0;
   background-color: var(--primary-text-color);
 }
+.icon-antenna::before {
+  background-image: url(../images/pictures/antenna.svg);
+}
+.icon-clock::before {
+  background-image: url(../images/pictures/clock.svg);
+}
+.icon-diagram::before {
+  background-image: url(../images/pictures/diagram.svg);
+}
+.icon-astronaut::before {
+  background-image: url(../images/pictures/astronaut.svg);
+}
 .section-desc {
   white-space: normal;
   line-height: 1.5;
   color: var(--title-text-color);
-
   font-size: 16px;
 }
 
@@ -201,6 +231,8 @@ body {
 .team-content {
   padding: 32px;
   text-align: center;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .work {
   padding-top: 0;
@@ -289,4 +321,5 @@ body {
   border: 0.5px solid #e7e9fc;
   border-top: none;
   gap: 8px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
