--- a/css/styles.css
+++ b/css/styles.css
@@ -180,38 +180,33 @@ body {
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
-.section-item::before {
-  content: "";
-  height: 112px;
+.advantages-icon-box {
+  display: flex;
+  box-sizing: border-box;
+  width: 264px;
   background-color: #f4f4fd;
   border-radius: 4px;
-  display: block;
-  background-repeat: no-repeat;
-  background-position: center;
   margin-bottom: 8px;
+}
+.advantages-icon {
+  margin-left: 100px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.section-item {
 }
 .section-item {
   width: calc((100% - 72px) / 4);
   flex-grow: 0;
   background-color: var(--primary-text-color);
 }
-.icon-antenna::before {
-  background-image: url(../images/pictures/antenna.svg);
-}
-.icon-clock::before {
-  background-image: url(../images/pictures/clock.svg);
-}
-.icon-diagram::before {
-  background-image: url(../images/pictures/diagram.svg);
-}
-.icon-astronaut::before {
-  background-image: url(../images/pictures/astronaut.svg);
-}
+
 .section-desc {
   white-space: normal;
   line-height: 1.5;
   color: var(--title-text-color);
   font-size: 16px;
+  margin-bottom: 8px;
 }
 
 .section-title {
@@ -231,7 +226,7 @@ body {
   background-color: #f4f4fd;
 }
 .team-content {
-  padding: 32px;
+  padding: 32px 0;
   text-align: center;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -285,18 +280,18 @@ body {
   display: flex;
 }
 .company-logo-box {
-  display: block;
-  margin-right: 24px;
-}
-.customers-link {
-}
-.company-logo {
-  fill: #8e8f99;
-  width: 168px;
-  height: 88px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  padding: 16px 32px;
+  width: 168px;
+  height: 88px;
+}
+.customers-link {
+  justify-content: center;
+  align-items: center;
+}
+
+.company-logo {
+  fill: #8e8f99;
 }
 .company-logo:hover {
   fill: #4d5ae5;
