--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ body {
 .advantages-content {
 }
 .section-subtitle {
+  color: #2e2f42;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -278,24 +279,30 @@ body {
 }
 .company-list {
   display: flex;
+  gap: 24px;
 }
 .company-logo-box {
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
   width: 168px;
   height: 88px;
 }
 .customers-link {
-  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .company-logo {
   fill: #8e8f99;
 }
-.company-logo:hover {
+.customers-link:is(:hover, :focus) {
+  border-color: #4d5ae5;
+}
+.customers-link:is(:hover, :focus) .company-logo {
   fill: #4d5ae5;
-  border: 1px solid #4d5ae5;
 }
 
 /* footer */
@@ -361,6 +368,8 @@ body {
 .portfolio-btn:focus {
   background: #404bbf;
   color: var(--primary-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-btn {
   background: #f4f4fd;
@@ -390,10 +399,19 @@ body {
 .visually-item {
   width: calc((100% - 48px) / 3);
 }
+
+.visually-link:is(:hover, :focus) {
+  border: 0.5px solid #f4f4fd;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.visually-link {
+  display: block;
+  border: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 .gallery-content {
   padding: 32px 16px;
-  border: 0.5px solid #e7e9fc;
   border-top: none;
   gap: 8px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
